chore: remove deprecated java property