@@ -33,7 +33,7 @@
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
 		<sonar.language>java</sonar.language>
-		<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea -Dfile.encoding=UTF-8</argLine>
+		<argLine>-Xms256m -Xmx512m -ea -Dfile.encoding=UTF-8</argLine>
 	</properties>
 
 	<dependencies>
